--- a/WebStore/Views/Home/Index.cshtml
+++ b/WebStore/Views/Home/Index.cshtml
@@ -6,6 +6,9 @@
     <title>Index</title>
 </head>
 <body>
-    <p>Что угодно!</p>
+    <h2>Магазин товаров</h2>
+    <p>
+        <a href="/Home/Employees">Сотрудники магазина</a>"
+    </p>
 </body>
 </html>
