--- a/WebStore/Views/_ViewImports.cshtml
+++ b/WebStore/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using WebStore
 @using WebStore.Models
 
-@addTagHelper *, Misrosoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, WebStore
