Добавлены страницы сайта, согласно макету

--- a/WebStore/Views/Shared/Partial/_Header.cshtml
+++ b/WebStore/Views/Shared/Partial/_Header.cshtml
@@ -7,8 +7,8 @@
                 <div class="col-sm-6">
                     <div class="contactinfo">
                         <ul class="nav nav-pills">
-                            <li><a href="#"><i class="fa fa-phone"></i> +7(123)456-78-90</a></li>
-                            <li><a href="#"><i class="fa fa-envelope"></i> info@domain.ru</a></li>
+                            <li><a href="#"><i class="fa fa-phone"></i> +7(920)233-18-01</a></li>
+                            <li><a href="#"><i class="fa fa-envelope"></i> xt207@yandex.ru</a></li>
                         </ul>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="logo pull-left">
-                        <a href="index.html"><img src="~/images/home/logo.png" alt="" /></a>
+                        <a asp-controller="Home" asp-action="Index"><img src="~/images/home/logo.png" alt="" /></a>
                     </div>
                     <div class="btn-group pull-right">
                         <div class="btn-group">
@@ -62,11 +62,11 @@
                 <div class="col-sm-8">
                     <div class="shop-menu pull-right">
                         <ul class="nav navbar-nav">
-                            <li><a href="#"><i class="fa fa-user"></i> Аккаунт</a></li>
-                            <li><a href="#"><i class="fa fa-star"></i> Список желаний</a></li>
-                            <li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Оформить заказ</a></li>
-                            <li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
-                            <li><a href="login.html"><i class="fa fa-lock"></i> Вход</a></li>
+                            <li><a asp-controller="Home" asp-action="NotFound"><i class="fa fa-user"></i> Аккаунт</a></li>
+                            <li><a asp-controller="Home" asp-action="NotFound"><i class="fa fa-star"></i> Список желаний</a></li>
+                            <li><a asp-controller=""Home" asp-action="Checkout"><i class="fa fa-crosshairs"></i> Оформить заказ</a></li>
+                            <li><a asp-controller="Home" asp-action="Cart"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
+                            <li><a asp-controller="Home" asp-action="Login"><i class="fa fa-lock"></i> Вход</a></li>
                         </ul>
                     </div>
                 </div>
