Добавлены карточки сотрудников

--- a/WebStore/Views/Home/Employees.cshtml
+++ b/WebStore/Views/Home/Employees.cshtml
@@ -1,17 +1,11 @@
 ﻿@model IEnumerable<WebStore.Models.Employee>
 @* ^--данные мы берём вот из этой модели--^*@
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Сотрудники</title>
-</head>
-<body>
 
+<div class="container">
     <h3>Сотрудники магазина</h3>
     <hr />
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <th>#</th>
@@ -19,23 +13,28 @@
                 <th>Имя</th>
                 <th>Отчество</th>
                 <th>Возраст</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
             @foreach (var employee in Model) //вот как раз той самой Model, которая в первой строчке
             {
-            <tr>
-                <td>@employee.Id</td>
-                <td>@employee.LastName</td>
-                <td>@employee.FirstName</td>
-                <td>@employee.Patronymic</td>
-                <td>@employee.Age</td>
-            </tr>
+                <tr>
+                    <td>@employee.Id</td>
+                    <td>@employee.LastName</td>
+                    <td>@employee.FirstName</td>
+                    <td>@employee.Patronymic</td>
+                    <td>@employee.Age</td>
+                    <td>
+                        <a asp-controller="Home" asp-action="EmployeeDetails" asp-route-id="@employee.Id">
+                            <i class="fa-edit"></i>
+                        </a>
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
-<p>
-    <a href="/">На главную</a>
-</p>
-</body>
-</html>
+    <p>
+        <a asp-controller="Home" asp-action="Index">На главную</a>
+    </p>
+</div>
