--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -6,7 +6,7 @@
             <ul role="menu" class="sub-menu">
                 <li><a asp-controller="Home" asp-action="Shop">Каталог</a></li>
                 <li><a asp-controller="Home" asp-action="ProductDetails">О товаре</a></li>
-                <li><a asp-controller=""Home" asp-action="Checkout">Оформить заказ</a></li>
+                <li><a asp-controller="" Home" asp-action="Checkout">Оформить заказ</a></li>
                 <li><a asp-controller="Home" asp-action="Cart">Корзина</a></li>
                 <li><a asp-controller="Home" asp-action="Login">Вход</a></li>
             </ul>
@@ -14,11 +14,13 @@
         <li class="dropdown">
             <a href="#">Блог<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
-                <li><a asp-controller=""Home" asp-action="Blog">Список блогов</a></li>
-                <li><a asp-controller=""Home" asp-action="BlogSingle">Блог магазина</a></li>
+                <li><a asp-controller="" Home" asp-action="Blog">Список блогов</a></li>
+                <li><a asp-controller="" Home" asp-action="BlogSingle">Блог магазина</a></li>
             </ul>
         </li>
-        <li><a asp-controller="Home" asp-action="NotFound">404</a></li>
+        <li><a asp-controller="Home" asp-action="NotFound404">404</a></li>
         <li><a asp-controller="Home" asp-action="ContactUs">Контакты</a></li>
+        <li><a asp-controller="Home" asp-action="Employees">Сотрудники</a></li>
+
     </ul>
 </div>
