--- a/WebStore/Views/Shared/Partial/_Header.cshtml
+++ b/WebStore/Views/Shared/Partial/_Header.cshtml
@@ -62,8 +62,8 @@
                 <div class="col-sm-8">
                     <div class="shop-menu pull-right">
                         <ul class="nav navbar-nav">
-                            <li><a asp-controller="Home" asp-action="NotFound404"><i class="fa fa-user"></i> Аккаунт</a></li>
-                            <li><a asp-controller="Home" asp-action="NotFound404"><i class="fa fa-star"></i> Список желаний</a></li>
+                            <li><a asp-controller="Home" asp-action="Redir"><i class="fa fa-user"></i> Аккаунт</a></li>
+                            <li><a asp-controller="Home" asp-action="Redir"><i class="fa fa-star"></i> Список желаний</a></li>
                             <li><a asp-controller=""Home" asp-action="Checkout"><i class="fa fa-crosshairs"></i> Оформить заказ</a></li>
                             <li><a asp-controller="Home" asp-action="Cart"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
                             <li><a asp-controller="Home" asp-action="Login"><i class="fa fa-lock"></i> Вход</a></li>
