--- a/WebStore/Views/Employees/Index.cshtml
+++ b/WebStore/Views/Employees/Index.cshtml
@@ -13,24 +13,30 @@
                 <th>Имя</th>
                 <th>Отчество</th>
                 <th>Возраст</th>
-                <th></th>                
+                <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
             @foreach (var employee in Model) //вот как раз той самой Model, которая в первой строчке
             {
-                <tr>
-                    <td>@employee.Id</td>
-                    <td>@employee.LastName</td>
-                    <td>@employee.FirstName</td>
-                    <td>@employee.Patronymic</td>
-                    <td>@employee.Age</td>
-                    <td>
-                        <a asp-action="Details" asp-route-id="@employee.Id">
-                            info
-                        </a>
-                    </td>                   
-                </tr>
+            <tr>
+                <td>@employee.Id</td>
+                <td>@employee.LastName</td>
+                <td>@employee.FirstName</td>
+                <td>@employee.Patronymic</td>
+                <td>@employee.Age</td>
+                <td>
+                    <a asp-action="Details" asp-route-id="@employee.Id">
+                        <i class="fa fa-info"></i>
+                    </a>
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@employee.Id">
+                        <i class="fa fa-edit"></i>
+                    </a>
+                </td>
+            </tr>
             }
         </tbody>
     </table>
