--- a/WebStore/Views/Employees/Details.cshtml
+++ b/WebStore/Views/Employees/Details.cshtml
@@ -46,7 +46,7 @@
     <div>
         @*@Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |*@
         <a asp-action="Index">Назад к списку</a>
-        <a asp-action="Edit" asp-route-id="@Model.Id">Редактировать</a>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Редактировать сотрудника</a>
         <a asp-action="Delete" asp-route-id="@Model.Id">Удалить</a>
     </div>
 
