--- a/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -4,9 +4,9 @@
         <li class="dropdown">
             <a href="#">Магазин<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
-                <li><a asp-controller="Home" asp-action="Shop">Каталог</a></li>
+                <li><a asp-controller="Catalog" asp-action="Index">Каталог</a></li>
                 <li><a asp-controller="Home" asp-action="ProductDetails">О товаре</a></li>
-                <li><a asp-controller="" Home" asp-action="Checkout">Оформить заказ</a></li>
+                <li><a asp-controller="Home" asp-action="Checkout">Оформить заказ</a></li>
                 <li><a asp-controller="Home" asp-action="Cart">Корзина</a></li>
                 <li><a asp-controller="Home" asp-action="Login">Вход</a></li>
             </ul>
