--- a/WebStore/Views/Catalog/Index.cshtml
+++ b/WebStore/Views/Catalog/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{ ViewBag.Title = "Каталог товаров";}
+﻿@model WebStore.ViewModels.CatalogViewModel
+@{ ViewBag.Title = "Каталог товаров";}
 
 <section>
     <div class="container">
@@ -8,7 +9,7 @@
             </div>
 
             <div class="col-sm-9 padding-right">
-               <partial name="Partial/_Products" />
+               <partial name="Partial/_Products" model="Model.Products"/>
             </div>
         </div>
     </div>
