Логирование действий с БД

--- a/WebStore/Views/Employees/Index.cshtml
+++ b/WebStore/Views/Employees/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model IEnumerable<WebStore.Models.Employee>
 @* ^--данные мы берём вот из этой модели--^*@
+@{ 
+    ViewData["Title"] = "Сотрудники";
+}
 
 
 <div class="container">
