--- a/WebStore/Views/Home/Blog.cshtml
+++ b/WebStore/Views/Home/Blog.cshtml
@@ -1,4 +1,7 @@
-﻿<section>
+﻿@{       ViewData["Title"] = "Блоги";
+}
+
+<section>
     <div class="container">
         <div class="row">
             <div class="col-sm-3">
