--- a/WebStore/Views/Home/Index.cshtml
+++ b/WebStore/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
 @using WebStore.ViewModels
 @inject IProductData ProductData
 @{ 
+    ViewBag.Title = "Магазин";
     var products = ProductData.GetProducts().Take(9).Select(p => new ProductViewModel
     {
         Id = p.Id,
