Логика процесса регистрации пользователя

--- a/WebStore/Views/Shared/Partial/_Header.cshtml
+++ b/WebStore/Views/Shared/Partial/_Header.cshtml
@@ -66,7 +66,7 @@
                             <li><a asp-controller="Home" asp-action="Redir"><i class="fa fa-star"></i> Список желаний</a></li>
                             <li><a asp-controller=""Home" asp-action="Checkout"><i class="fa fa-crosshairs"></i> Оформить заказ</a></li>
                             <li><a asp-controller="Home" asp-action="Cart"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
-                            <li><a asp-controller="Home" asp-action="Login"><i class="fa fa-lock"></i> Вход</a></li>
+                            <li><a asp-controller="Account" asp-action="Login"><i class="fa fa-lock"></i> Вход</a></li>
                         </ul>
                     </div>
                 </div>
